refactor: 테스트 로직 수정